--- a/Szakdolgozat/src/szakdolgozat/logins.form
+++ b/Szakdolgozat/src/szakdolgozat/logins.form
@@ -31,26 +31,26 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="id" max="32767" attributes="0"/>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="34" max="32767" attributes="0"/>
-                      <Component id="Back" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                  </Group>
                   <Component id="time" alignment="0" max="32767" attributes="0"/>
-                  <Component id="user" alignment="1" max="32767" attributes="0"/>
+                  <Component id="id" alignment="0" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="Back" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="user" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="idl" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="timel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="userl" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="searchb" min="-2" max="-2" attributes="0"/>
-                          <Component id="delete" min="-2" pref="71" max="-2" attributes="0"/>
+                          <Component id="searchb" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="delete" alignment="0" min="-2" pref="71" max="-2" attributes="0"/>
+                          <Component id="info" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="200" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -82,6 +82,8 @@
                       <Component id="searchb" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="delete" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="info" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -194,6 +196,8 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Bejelentkez&#xe9;sek"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="info">
     </Component>
   </SubComponents>
 </Form>
